# vertex

./: .env.example  .gitignore  Dockerfile  README.md  README_HF.md  docker-compose.yml
assets/artifacts/: swarm_session_summary.json
docs/: LLM_SYSTEM_BRIEF.md  PROTOCOL.md  WORLD_FIRST_DATA.md
swarm-os/: package-lock.json  package.json
swarm-os/agents/: Cargo.toml  architect.mjs  scholar.mjs  verifier.mjs
swarm-os/agents/keys/: Elite-Architect.json  Elite-Scholar-0.json  Elite-Scholar-1.json  Elite-Scholar-2.json  Elite-Scholar-3.json  Elite-Scholar-4.json  Shard-Scholar-Cluster-0.json  Shard-Scholar-Cluster-1.json  Shard-Scholar-Cluster-10.json  Shard-Scholar-Cluster-11.json  Shard-Scholar-Cluster-12.json  Shard-Scholar-Cluster-13.json  Shard-Scholar-Cluster-14.json  Shard-Scholar-Cluster-2.json  Shard-Scholar-Cluster-3.json  Shard-Scholar-Cluster-4.json  Shard-Scholar-Cluster-5.json  Shard-Scholar-Cluster-6.json  Shard-Scholar-Cluster-7.json  Shard-Scholar-Cluster-8.json  Shard-Scholar-Cluster-9.json  Verifier-Prime-0.json  Verifier-Prime-1.json  Verifier-Prime-2.json  test_agent_1.json
swarm-os/config/: swarm.config.mjs
swarm-os/data/: reputation_Elite-Architect.json  reputation_Elite-Scholar-0.json  reputation_Elite-Scholar-1.json  reputation_Elite-Scholar-2.json  reputation_Elite-Scholar-3.json  reputation_Elite-Scholar-4.json  reputation_Shard-Scholar-Cluster-0.json  reputation_Shard-Scholar-Cluster-1.json  reputation_Shard-Scholar-Cluster-10.json  reputation_Shard-Scholar-Cluster-11.json  reputation_Shard-Scholar-Cluster-12.json  (+13 more)
(+118 files in other folders)
