[workspace]
members = [".", "tashi-vertex-stub"]

[package]
name    = "swarm-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swarm-agent"
path = "src/main.rs"

[dependencies]
# ── Tashi Vertex SDK ──────────────────────────────────────────────────────────
# Swap path → version once the crate lands on crates.io.
tashi-vertex = { path = "tashi-vertex-stub" }

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── HTTP async client ─────────────────────────────────────────────────────────
# 0.12 aligns with hyper 1.x used by axum 0.7 — avoids linker conflicts.
reqwest = { version = "0.12", features = ["json"] }

# ── HTTP server (safety-halt inlet — belt & suspenders) ───────────────────────
axum = "0.7"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
